2022-05-08  Sauro Menna  <smenna@users.sourceforge.net>
    * Rename gctestsetup.cbl (in tests/src folder) for problems in MinGW environment
    * from gctestsetup.cbl to gctestset.cbl
    * Modified compile scripts compile.sh, compile.bat, compile_mingw.bat
    * Added the source file viewfiledate2.cbl in tests/src folder  
    * Modified job.c, file.c, outfil.c to compatibility with libcob (GnuCOBOL) version 3.2.

2022-04-06  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.03
    * New Statement JOINJKEYS to join two files
    * Test cases for join and examples (testjoin.sh or testjoin.bat in gcsort/tests/script)
    * New version of MAKEFILE MinGW compatible, review LIBs
    * Update help GCSORT
    * Updated command gcsort --help 

2022-01-19  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.02
    * Modified MAKEFILE project
    * New option RECORD CONTROL STATEMENT
    * New Date : DATE1, DATE2, DATE3, DATE4 with (+/-)days/month
    * New for INREC/OUTREC option CHANGE Lookup table and set with value or input field
    * Review comment style from '//' to '/*  ... */'
    * Fixed problems with TestCase modules
    * Update Help (gcsort --help) and documentation
    * Fixed memory leaks on some options and under certain conditions

2021-12-27  Sauro Menna  <smenna@users.sourceforge.net>
    * copyfile.c - Fixed problem with file name when name is environment variable
    * job.c - Fixed problem with variables used to compare fields - 
    * gcsorthelp.c - Modified option '--version' with new info 'gcsort 64bit-mode'

2021-09-14  Sauro Menna  <smenna@users.sourceforge.net>
    * job.c - Fix problem with empty file
    
2021-09-03  Sauro Menna  <smenna@users.sourceforge.net>
    * job.c - Integrated command with only INCLUDE COND condition
    *         Example: gcsort INCLUDE COND=<condition>    USE <filein>   RECORD ...  GIVE <fileout> RECORD ...
    
2021-05-21  Sauro Menna  <smenna@users.sourceforge.net>