@@ -1,9 +1,11 @@
+2022-05-11  Sauro Menna  <smenna@users.sourceforge.net>
+    * Modified file.c for compatibility with libcob (GnuCOBOL) version 3.2.
 2022-05-08  Sauro Menna  <smenna@users.sourceforge.net>
     * Rename gctestsetup.cbl (in tests/src folder) for problems in MinGW environment
     * from gctestsetup.cbl to gctestset.cbl
     * Modified compile scripts compile.sh, compile.bat, compile_mingw.bat
     * Added the source file viewfiledate2.cbl in tests/src folder  
-    * Modified job.c, file.c, outfil.c to compatibility with libcob (GnuCOBOL) version 3.2.
+    * Modified job.c, file.c, outfil.c for compatibility with libcob (GnuCOBOL) version 3.2.
 
 2022-04-06  Sauro Menna  <smenna@users.sourceforge.net>
     * Version 1.03.03
